[gd_scene load_steps=2 format=3 uid="uid://g6ob1cewppg3o"]

[ext_resource type="Script" path="res://algorithms/proceduralaudio/subtractive_synthesis/SubtractiveSynthesis.gd" id="1_subtractive"]

[node name="SubtractiveSynthesis" type="Node3D"]
script = ExtResource("1_subtractive")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.2

[node name="Oscillators" type="Node3D" parent="."]

[node name="FilterStage" type="Node3D" parent="."]

[node name="SpectrumOutput" type="Node3D" parent="."]

[node name="FilterFrequency" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="FilterResonance" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="FilterType" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
size = Vector3(0.8, 1, 0.4)
